# duck-language

rust-static-lox/: Cargo.toml  README  index.rs  rustfmt.toml
rust-static-lox/core/lox/: 1.rs  2.rs  3.rs  5.rs  6.rs  7.rs  8.rs  duck.lox
rust-static-lox/core/src/: main.rs  runner.rs
rust-static-lox/core/tests/: duck.lox
rust-static-lox/diagnostic/: Cargo.toml
rust-static-lox/diagnostic/src/: diagnostic.rs  lib.rs  source_map.rs
rust-static-lox/diagnostic/src/tests/: diagnostic.rs  mod.rs  source_map.rs
rust-static-lox/diagnostic/src/types/: error.rs
rust-static-lox/diagnostic/tests/: complex_test.rs  coverage.rs
rust-static-lox/lexer/: todo.md
rust-static-lox/lexer/src/: diagnostics.rs  lib.rs  scanner_utils.rs  token.rs
rust-static-lox/lexer/src/lexers/: arithmetic.rs  assignment_and_comparison.rs  bitwise_and_logical.rs  comment.rs  keywords.rs  lifetimes.rs  number.rs  punctuation_and_delimiters.rs  shebang.rs  string.rs
rust-static-lox/lexer/src/tests/: arithmetic.rs  assignment_and_comparison.rs  bitwise.rs  comment.rs  coverage.rs  keywords.rs  lifetimes.rs  mod.rs  numbers.rs  punctuation_and_delimiters.rs  shebang.rs  string.rs  string_private.rs
rust-static-lox/lexer/tests/: lexer_tests.rs
rust-static-lox/name_resolution/: Cargo.toml
rust-static-lox/name_resolution/src/: lib.rs
rust-static-lox/name_resolution/tests/: basic.rs
rust-static-lox/parser/: parser_diagnostics_refactor_ideas.txt  parser_status.txt  todo.md
rust-static-lox/parser/src/: decoder.rs  diagnostics.rs  grammar  lib.rs  macros.rs  parser_utils.rs
(+118 files in other folders)
