[package]
name = "diagnostic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
colored.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }
